# cv

./: .gitignore  README.md  batch-precalculate-simclr.sh  batch-precalculate-vicreg.sh  batch-precalculate.sh  batch-simclr.sh  batch-test-linear-simclr.sh  batch-test-linear-vicreg.sh  batch-train-simclr.sh  batch-train-vicreg.sh  batch-vicreg.sh  batch-visualize-simclr.sh  batch-visualize-vicreg.sh  batch.sh  extract_bee_crops.py  flake.nix  pyproject.toml  requirements.txt
honeybee_learning/: __init__.py  __main__.py  config.py  dataset.py  dataset_split.py  dataset_test.py  dataset_train.py  entrypoints.py  evaluate.py  extract_bee_crops.py  image_transformations.py  preprocessing.py  scheduler.py  simclr.py  test.ipynb  test.py  test_linear.py  test_precalculate.py  test_visual.py  train.py  validate.py  vicreg.py
