[project]
name = "honeybee-learning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightly>=1.5.21",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ruff>=0.12.0",
]

[tool.ruff]
target-version = "py313"  # minimum

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
