[project]
name = "honeybee-learning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightly>=1.5.21",
    "numpy>=2.3.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb>=0.20.1",
]

[project.scripts]
honeybee-learning = "honeybee_learning.__main__:main"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "ruff>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["honeybee_learning"]

[tool.ruff]
target-version = "py313"  # minimum

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
